1.3.0
- CHANGE: Updated Java from 1.8 to 11
- CHANGE: Refactored lots of coupled code
- CHANGE: Extracted lots of reusable components such as retriable locks for easier manual control of locks
- BUGFIX: `LockBeanPostProcessor` will now fire after existing advisors to support transactional advisors