@@ -1,7 +1,7 @@
 /*
  * MIT License
  *
- * Copyright (c) 2018 Alen Turkovic
+ * Copyright (c) 2020 Alen Turkovic
  *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
@@ -27,7 +27,6 @@ package com.github.alturkovic.lock.key;
 import com.github.alturkovic.lock.exception.EvaluationConvertException;
 import java.lang.reflect.Method;
 import java.util.Collection;
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -54,10 +53,8 @@ public class SpelKeyGenerator extends CachedExpressionEvaluator implements KeyGe
 
   @Override
   public List<String> resolveKeys(final String lockKeyPrefix, final String expression, final Object object, final Method method, final Object[] args) {
-    final EvaluationContext context = new MethodBasedEvaluationContext(object, method, args, super.getParameterNameDiscoverer());
-    context.setVariable("executionPath", object.getClass().getCanonicalName() + "." + method.getName());
-
-    final List<String> keys = convertResultToList(getExpression(this.conditionCache, new AnnotatedElementKey(method, object.getClass()), expression).getValue(context));
+    final Object expressionValue = evaluateExpression(expression, object, method, args);
+    final List<String> keys = convertResultToList(expressionValue);
 
     if (keys.stream().anyMatch(Objects::isNull)) {
       throw new EvaluationConvertException("null keys are not supported: " + keys);
@@ -70,26 +67,14 @@ public class SpelKeyGenerator extends CachedExpressionEvaluator implements KeyGe
     return keys.stream().map(key -> lockKeyPrefix + key).collect(Collectors.toList());
   }
 
-  @SuppressWarnings("unchecked")
   protected List<String> convertResultToList(final Object expressionValue) {
     final List<String> list;
-
-    if (expressionValue == null) {
-      throw new EvaluationConvertException("Expression evaluated in a null");
-    }
-
     if (expressionValue instanceof Iterable) {
-      final TypeDescriptor genericCollection = TypeDescriptor.collection(Collection.class, TypeDescriptor.valueOf(Object.class));
-      final TypeDescriptor stringList = TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(String.class));
-
-      list = (List<String>) conversionService.convert(expressionValue, genericCollection, stringList);
+      list = iterableToList(expressionValue);
     } else if (expressionValue.getClass().isArray()) {
-      final TypeDescriptor genericArray = TypeDescriptor.array(TypeDescriptor.valueOf(Object.class));
-      final TypeDescriptor stringList = TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(String.class));
-
-      list = (List<String>) conversionService.convert(expressionValue, genericArray, stringList);
+      list = arrayToList(expressionValue);
     } else {
-      list = Collections.singletonList(expressionValue.toString());
+      list = List.of(expressionValue.toString());
     }
 
     if (CollectionUtils.isEmpty(list)) {
@@ -97,5 +82,34 @@ public class SpelKeyGenerator extends CachedExpressionEvaluator implements KeyGe
     }
 
     return list;
+  }
+
+  private Object evaluateExpression(final String expression, final Object object, final Method method, final Object[] args) {
+    final EvaluationContext context = new MethodBasedEvaluationContext(object, method, args, super.getParameterNameDiscoverer());
+    context.setVariable("executionPath", object.getClass().getCanonicalName() + "." + method.getName());
+
+    final Expression evaluatedExpression = getExpression(this.conditionCache, new AnnotatedElementKey(method, object.getClass()), expression);
+    final Object expressionValue = evaluatedExpression.getValue(context);
+    if (expressionValue == null) {
+      throw new EvaluationConvertException("Expression evaluated in a null");
+    }
+
+    return expressionValue;
+  }
+
+  private List<String> iterableToList(final Object expressionValue) {
+    final TypeDescriptor genericCollection = TypeDescriptor.collection(Collection.class, TypeDescriptor.valueOf(Object.class));
+    final TypeDescriptor stringList = TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(String.class));
+
+    //noinspection unchecked
+    return (List<String>) conversionService.convert(expressionValue, genericCollection, stringList);
+  }
+
+  private List<String> arrayToList(final Object expressionValue) {
+    final TypeDescriptor genericArray = TypeDescriptor.array(TypeDescriptor.valueOf(Object.class));
+    final TypeDescriptor stringList = TypeDescriptor.collection(List.class, TypeDescriptor.valueOf(String.class));
+
+    //noinspection unchecked
+    return (List<String>) conversionService.convert(expressionValue, genericArray, stringList);
   }
 }
